---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts` (Not imported by resolver)

## Source

```ts
import type { Bar } from "./bar.ts";
import { foo } from "./foo.ts";

const bar: Bar = { bar: "bar" };

const stringyBar = bar.bar;

const result = foo(bar.bar, 1);
```

## Module Info

```
Exports {
  No exports
}
Imports {
  "Bar" => {
    Specifier: "./bar.ts"
    Resolved path: "/src/bar.ts"
    Import Symbol: Bar
  }
  "foo" => {
    Specifier: "./foo.ts"
    Resolved path: "/src/foo.ts"
    Import Symbol: foo
  }
}
```

## Registered types

```
Module TypeId(0) => string: bar

Module TypeId(1) => Object {
  prototype: No prototype
  members: ["bar": Module(0) TypeId(0)]
}

Module TypeId(2) => instanceof Import Symbol: Bar from "/src/bar.ts"

Module TypeId(3) => Module(0) TypeId(2).bar

Module TypeId(4) => Import Symbol: foo from "/src/foo.ts"

Module TypeId(5) => number: 1

Module TypeId(6) => Call Module(0) TypeId(4)(Module(0) TypeId(3)Module(0) TypeId(5))
```

# `/src/bar.ts` (Module 1)

## Source

```ts
export type Bar = { bar: "bar" };
```

## Module Info

```
Exports {
  "Bar" => {
    ExportOwnExport => JsOwnExport::Binding(21..24)
  }
}
Imports {
  No imports
}
```

## Exported Bindings

```
Bar  => BindingTypeData {
  Types Module(0) TypeId(1),
}
```

## Registered types

```
Module TypeId(0) => string: bar

Module TypeId(1) => Object {
  prototype: No prototype
  members: ["bar": Module(0) TypeId(0)]
}
```

# `/src/foo.ts` (Module 2)

## Source

```ts
import type { Bar } from "./bar.ts";

export function foo<T>(foo: T, bar: Bar): T;
```

## Module Info

```
Exports {
  "foo" => {
    ExportOwnExport => JsOwnExport::Binding(71..74)
  }
}
Imports {
  "Bar" => {
    Specifier: "./bar.ts"
    Resolved path: "/src/bar.ts"
    Import Symbol: Bar
  }
}
```

## Exported Bindings

```
foo => BindingTypeData {
  Types Module(0) TypeId(3),
}
```

## Registered types

```
Module TypeId(0) => instanceof Module(0) TypeId(2)

Module TypeId(1) => instanceof Import Symbol: Bar from "/src/bar.ts"

Module TypeId(2) => T

Module TypeId(3) => sync Function "foo" {
  accepts: {
    params: [
      required foo: Module(0) TypeId(0)
      required bar: Module(0) TypeId(1)
    ]
    type_args: [Module(0) TypeId(2)]
  }
  returns: Module(0) TypeId(0)
}
```

# Module Resolver

## Registered types

```
Full TypeId(0) => namespace for ModuleId(1)

Full TypeId(1) => namespace for ModuleId(2)

Full TypeId(2) => string: bar

Full TypeId(3) => Object {
  prototype: No prototype
  members: ["bar": Module(0) TypeId(0)]
}

Full TypeId(4) => Object {
  prototype: No prototype
  members: ["bar": Module(1) TypeId(0)]
}

Full TypeId(5) => Module(1) TypeId(0)

Full TypeId(6) => Module(2) TypeId(3)

Full TypeId(7) => number: 1

Full TypeId(8) => string: bar
```
